--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,9 @@
     tools:context="com.example.marty_000.martijnheijstekfinalapp.MainActivity">
 
  <RelativeLayout
-    android:layout_width="match_parent"
+     android:layout_width="match_parent"
      android:id="@+id/titleLayout"
-    android:layout_height="wrap_content">
+     android:layout_height="wrap_content">
         <TextView
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
@@ -32,6 +32,7 @@
     <RelativeLayout
         android:layout_below="@+id/titleLayout"
         android:layout_width="match_parent"
+        android:layout_margin="10dp"
         android:layout_height="wrap_content"
         android:id="@+id/search">
         <EditText
