--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -9,9 +9,19 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.marty_000.martijnheijstekfinalapp.SignInActivity">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/signInTitle"
+        android:layout_centerHorizontal="true"
+        android:textSize="18sp"
+        android:text="@string/askSignIn"/>
     <com.google.android.gms.common.SignInButton
         android:id="@+id/sign_in_button"
         android:layout_width="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/signInTitle"
+        android:layout_margin="10dp"
         android:onClick="onClick"
         android:layout_height="wrap_content" />
 <TextView
