--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -9,13 +9,15 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.marty_000.martijnheijstekfinalapp.SignInActivity">
+
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/signInTitle"
         android:layout_centerHorizontal="true"
         android:textSize="18sp"
         android:text="@string/askSignIn"/>
+
     <com.google.android.gms.common.SignInButton
         android:id="@+id/sign_in_button"
         android:layout_width="wrap_content"
@@ -24,9 +26,33 @@
         android:layout_margin="10dp"
         android:onClick="onClick"
         android:layout_height="wrap_content" />
-<TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/mStatusTextView"
-    android:layout_below="@+id/sign_in_button"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/mStatusTextView"
+        android:layout_below="@+id/sign_in_button"/>
+
+    <ImageView
+        android:layout_below="@+id/mStatusTextView"
+        android:layout_above="@+id/appDescription"
+        android:layout_alignParentBottom="true"
+        android:src="@drawable/appicon"
+        android:contentDescription="@string/app_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/appDescription"
+        android:text="@string/appDescription"
+        android:layout_alignParentBottom="true"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/sign_out_button"
+        android:text="signOut"/>
 </RelativeLayout>
