--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -8,36 +8,42 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.marty_000.martijnheijstekfinalapp.MainActivity">
-
- <RelativeLayout
-     android:layout_width="wrap_content"
-     android:id="@+id/titleLayout"
-     android:layout_height="wrap_content">
-        <TextView
-        android:layout_centerHorizontal="true"
-        android:layout_width="wrap_content"
-        android:id="@+id/titleMain"
-        android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:text="@string/welcomeTitle" />
-     <TextView
-         android:layout_below="@+id/titleMain"
-         android:layout_centerHorizontal="true"
-         android:layout_width="wrap_content"
-         android:id="@+id/subtitleMain"
-         android:layout_margin="5dp"
-         android:layout_height="wrap_content"
-         android:text="" />
-    </RelativeLayout>
-
     <RelativeLayout
-        android:background="@drawable/back"
-        android:padding="10dp"
-        android:layout_below="@+id/titleLayout"
-        android:layout_width="wrap_content"
-        android:layout_margin="5dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/search">
+        android:layout_width="250dp"
+        android:id="@+id/titlesAndSearch"
+        android:layout_height="wrap_content">
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:id="@+id/titleLayout"
+            android:layout_centerHorizontal="true"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:id="@+id/titleMain"
+                android:layout_centerHorizontal="true"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:text="@string/welcomeTitle" />
+            <TextView
+                android:layout_below="@+id/titleMain"
+                android:layout_width="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:id="@+id/subtitleMain"
+                android:layout_margin="5dp"
+                android:layout_height="wrap_content"
+                android:text="" />
+            </RelativeLayout>
+
+        <RelativeLayout
+            android:background="@drawable/back"
+            android:padding="10dp"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/titleLayout"
+            android:layout_width="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/search">
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -51,13 +57,15 @@
             android:onClick="searchSurfSpot"
             android:id="@+id/SearchButton"
             android:text="@string/search"/>
+        </RelativeLayout>
     </RelativeLayout>
+
     <RelativeLayout
         android:background="@drawable/back"
         android:layout_margin="5dp"
         android:padding="10dp"
-        android:layout_toRightOf="@+id/search"
-        android:layout_toEndOf="@+id/search"
+        android:layout_toRightOf="@+id/titlesAndSearch"
+        android:layout_toEndOf="@+id/titlesAndSearch"
         android:layout_alignParentTop="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
